# SelfEvo

./: .gitignore  README.md  pyproject.toml  requirements.txt
api/: __init__.py  server.py
connectors/: __init__.py  agent_connector.py  base_agent.py  memory.py  quick_agent.py
dashboard/: app.py
evolution/: __init__.py  evolution_tracker.py  llm_protocol.py  sepo_engine.py
examples/: agents.py  multi_agent_raw.py  multi_agent_simple.py  multi_agent_with_masc.py  quickstart.py  server_demo.py
interceptor/: __init__.py  correction_agent.py  masc_validator.py
logs/: .gitkeep  __init__.py  logger.py
tests/: test_agent_connector.py  test_async_stream_memory.py  test_correction_agent.py  test_gemini_live.py  test_masc_validator.py  test_quick_api.py
