[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "masc-sepo"
version = "1.0.0"
description = "LLM-agnostic connector framework with automatic output validation (MASC) and self-evolving prompt optimization (SePO)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Your Name", email = "you@example.com" }]
keywords = ["llm", "agents", "validation", "prompt-optimization", "ai", "masc", "sepo"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Core dependencies — minimal; LLM SDKs are optional extras
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dashboard = ["streamlit>=1.32.0", "pandas>=2.0"]
openai    = ["openai>=1.0"]
anthropic = ["anthropic>=0.20"]
gemini    = ["google-genai>=0.3"]
ollama    = ["ollama>=0.1"]
cohere    = ["cohere>=5.0"]
mistral   = ["mistralai>=1.0"]
dev       = [
    "pytest>=7.0",
    "httpx>=0.27",  # for FastAPI TestClient
    "ruff",
    "mypy",
]
all = [
    "masc-sepo[dashboard,openai,anthropic,gemini,ollama,cohere,mistral,dev]"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["connectors*", "interceptor*", "evolution*", "logs*", "api*", "dashboard*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
